# mtg-limited-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
evaluations/: DSK.csv  MSH.csv
mtg_eval/: __init__.py  cli.py  expert_grades.py  merge.py  scoring.py  scryfall.py  seventeen_lands.py  sheets.py
scripts/: install-weekly.sh  weekly-update.sh
tests/: test_expert_grades.py  test_merge.py  test_scoring.py  test_scryfall.py  test_seventeen_lands.py  test_sheets.py
