[project]
name = "mtg-limited-eval"
version = "0.1.0"
description = "Per-set Magic: The Gathering Limited card evaluation tool (Scryfall + 17Lands + manual eval)"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "google-auth-oauthlib>=1.4.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tabulate>=0.10.0",
]

[project.scripts]
mtg-eval = "mtg_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mtg_eval"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
